[gd_scene load_steps=18 format=3 uid="uid://blty1ony4m351"]

[ext_resource type="LabelSettings" uid="uid://yf5bvn4e6wey" path="res://Resources/Fonts/styles/menu_label.tres" id="1_w1fbp"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_yo4v4"]
[ext_resource type="Script" path="res://Scripts/menu_node.gd" id="2_hl0mm"]
[ext_resource type="AudioStream" uid="uid://dnyugy6hs76mb" path="res://Resources/Sounds/MenuCursor.ogg" id="3_8yvr6"]
[ext_resource type="Texture2D" uid="uid://cu31l5tubftv7" path="res://Resources/Sprites/Soul.png" id="3_pbhkn"]
[ext_resource type="Script" path="res://Scripts/setting_selection.gd" id="3_rhj55"]
[ext_resource type="AudioStream" uid="uid://byklmjr65hmoo" path="res://Resources/Sounds/MenuSelect.ogg" id="3_vws4m"]
[ext_resource type="Script" path="res://Scripts/soul_selector.gd" id="4_fex45"]
[ext_resource type="AudioStream" uid="uid://sog4kjiopuhm" path="res://Resources/Sounds/Flash.ogg" id="5_16xtt"]
[ext_resource type="AudioStream" uid="uid://df024t67wo4ev" path="res://Resources/Sounds/Logo Appearing.ogg" id="7_x23ft"]
[ext_resource type="Texture2D" uid="uid://ddb4l4xbjhcqv" path="res://Resources/Sprites/Worst Time Simulator.png" id="9_xvpl8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ggrs"]
atlas = ExtResource("9_xvpl8")
region = Rect2(0, 0, 3160, 200)

[sub_resource type="Gradient" id="Gradient_q6nce"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_06d25"]
gradient = SubResource("Gradient_q6nce")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ckty"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = 160.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
scale_min = 7.0
scale_max = 7.0
color = Color(0, 1, 1, 0.392157)
color_ramp = SubResource("GradientTexture1D_06d25")
turbulence_influence_min = 0.0

[sub_resource type="Gradient" id="Gradient_8xh3g"]
colors = PackedColorArray(0, 1, 1, 0.164706, 0, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wdhac"]
gradient = SubResource("Gradient_8xh3g")

[node name="Menu Scene" type="Node"]

[node name="Menu" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(900, 200)
script = ExtResource("1_yo4v4")

[node name="MenuContainer" type="Node2D" parent="Menu"]

[node name="FirstMenu" type="Node2D" parent="Menu/MenuContainer"]
script = ExtResource("2_hl0mm")

[node name="Start" type="Label" parent="Menu/MenuContainer/FirstMenu"]
offset_right = 600.0
offset_bottom = 64.0
text = "Start"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="Settings" type="Label" parent="Menu/MenuContainer/FirstMenu"]
offset_top = 68.0
offset_right = 600.0
offset_bottom = 132.0
text = "Settings"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="Credits" type="Label" parent="Menu/MenuContainer/FirstMenu"]
offset_top = 136.0
offset_right = 600.0
offset_bottom = 200.0
text = "Credits"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="Custom Attacks" type="Label" parent="Menu/MenuContainer/FirstMenu"]
offset_top = 204.0
offset_right = 600.0
offset_bottom = 268.0
text = "Custom Attacks"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="SettingsMenu" type="Node2D" parent="Menu/MenuContainer"]
visible = false
script = ExtResource("2_hl0mm")

[node name="NoMusic" type="Label" parent="Menu/MenuContainer/SettingsMenu"]
modulate = Color(1, 1, 0, 1)
offset_right = 212.0
offset_bottom = 64.0
text = "No Music"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")
LinkedProperty = "MusicEnabled"
Inverted = true

[node name="CoolAnimations" type="Label" parent="Menu/MenuContainer/SettingsMenu"]
modulate = Color(1, 1, 0, 1)
offset_top = 68.0
offset_right = 408.0
offset_bottom = 132.0
text = "Cool Animations"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")
LinkedProperty = "CoolAnimations"

[node name="DifficultyLabel" type="Label" parent="Menu/MenuContainer/SettingsMenu"]
offset_top = 136.0
offset_right = 516.0
offset_bottom = 200.0
text = "Difficulty Settings"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="DifficultyMenu" type="Node2D" parent="Menu/MenuContainer"]
visible = false
script = ExtResource("2_hl0mm")

[node name="HardMode" type="Label" parent="Menu/MenuContainer/DifficultyMenu"]
offset_right = 240.0
offset_bottom = 64.0
text = "Hard Mode"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="NoDeath" type="Label" parent="Menu/MenuContainer/DifficultyMenu"]
offset_top = 68.0
offset_right = 208.0
offset_bottom = 132.0
text = "No Death"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")

[node name="MaxHP" type="Label" parent="Menu/MenuContainer/DifficultyMenu"]
offset_top = 136.0
offset_right = 208.0
offset_bottom = 200.0
text = "Max HP"
label_settings = ExtResource("1_w1fbp")
script = ExtResource("3_rhj55")
SideOption = true
ClampedMin = 1.0
ClampedMax = 100.0
LinkedProperty = "MaxHP"

[node name="MenuCursor" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource("3_8yvr6")

[node name="MenuSelect" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource("3_vws4m")

[node name="Flash" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource("5_16xtt")

[node name="LogoAppear" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource("7_x23ft")

[node name="SoulSelector" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_fex45")

[node name="Sprite2D" type="Sprite2D" parent="SoulSelector"]
modulate = Color(1, 0, 0, 1)
texture_filter = 1
rotation = 1.5708
scale = Vector2(3, 3)
texture = ExtResource("3_pbhkn")

[node name="WTS" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1585.0
offset_top = -100.0
offset_right = 1575.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(1580, 100)
texture = SubResource("AtlasTexture_0ggrs")

[node name="BottomParticles" type="GPUParticles2D" parent="."]
position = Vector2(960, 1460)
emitting = false
amount = 160
process_material = SubResource("ParticleProcessMaterial_4ckty")
fixed_fps = 60
collision_base_size = 0.0
visibility_rect = Rect2(-960, -500, 1920, 500)

[node name="BottomGradient" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_right = -560.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 0
rotation = -1.5708
texture = SubResource("GradientTexture1D_wdhac")
